# dr-emu

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-cyst  README.md  cyst_infrastructure.py  deployment_script.py  docker-compose-demo.yml  docker-compose-netshoot.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  setup-containers.py  testbed-config.py
alembic/: env.py
alembic/versions/: 272289f38e0b_create_initial_tables.py  66b064e6af24_create_initial_tables.py  87401fef9807_create_initial_tables.py  88c1a1fec1d2_create_initial_tables.py  9902c13e939c_create_initial_tables.py  a34c8e38aae9_create_initial_tables.py  a498cbf5e29c_create_tables.py  be6dbedc8603_add_depends_on_feature.py  f95d310b03d6_create_initial_tables.py  fbf3ee8be973_create_initial_tables.py  fe9691854ea4_create_initial_tables.py
cli/: __init__.py  agent.py  infrastructure.py  main.py  run.py  template.py
cli/config/: config.py  endpoints.py
cyst_components/beast-demo/: .gitignore  infrastructure.py  scenario_2.py  scenario_3.py  setup.py
cyst_components/beast-demo/cryton_proxy/: action_database.py  main.py
cyst_components/beast-demo/cyst_models/mv/: main.py
cyst_components/cyst-core/: .gitignore  .gitlab-ci.yml  setup.py
cyst_components/cyst-core/cyst_models/cyst/: main.py
cyst_components/cyst-core/cyst_services/scripted_actor/: main.py
cyst_components/cyst-core/docs/source/: conf.py  index.rst
cyst_components/cyst-core/tests/integration/: test_meta.py  (+1 more)
demos/2023/: README.md  cryton-template.yml  demo.drawio  docker-compose.yml
demos/2025/firehole_configs/: vsftpd.yaml
docker/: Dockerfile-beast-user
docker_files/: Dockerfile-worker
docker_testbed/: controller.py  cyst_parser.py  main.py
docker_testbed/lib/: base.py  network.py  node.py  router.py  service.py
docker_testbed/util/: constants.py  util.py
dr_emu/: app.py  database_config.py  event_handlers.py  middleware.py  models.py  resources.py  settings.py
dr_emu/api/: constants.py  helpers.py
dr_emu/api/dependencies/: core.py
dr_emu/api/endpoints/: agent.py  image.py  infrastructure.py  run.py  template.py
dr_emu/cli/: agent.py  infrastructure.py  main.py  run.py  template.py
dr_emu/controllers/: agent.py  database.py  image.py  infrastructure.py  instance.py  router.py  run.py  template.py
dr_emu/lib/: constants.py  exceptions.py  logger.py  util.py
dr_emu/schemas/: agent.py  image.py  infrastructure.py  run.py  template.py
parser/: cyst_parser.py
parser/lib/: containers.py  simple_models.py
parser/util/: constants.py  util.py
resources/: inventory.yml  pass_list.txt  run_scenario_1.sh  run_scenario_2.sh  run_scenario_3.sh  template.yml
router_configs/server_router/config/: config.boot
router_configs/user_router/config/: config.boot
router_configs/wan_router/config/: config.boot
router_scripts/: user_router.sh  wan_router.sh
shared/: classes.py  constants.py  endpoints.py
testbed_app/: app.py  database.py  database_config.py  event_handlers.py  infrastructure_util.py  middleware.py  models.py  resources.py  routes.py  settings.py  views.py
testbed_app/api/endpoints/: agent.py  infrastructure.py  run.py  template.py
testbed_app/controllers/: agent.py  database.py  infrastructure.py  instance.py  router.py  run.py  template.py
testbed_app/lib/: exceptions.py  logger.py
testbed_config_app/: classes.py  cyst_infrastructure_parser.py  deploy_docker_infra.py  router.py
testbed_config_app/util/: constants.py  docker_envs.yml
tests/e2e/: deployment_checker.py  test_infrastructure.py
tests/integration/: test_rest_api.py
tests/integration_tests/: conftest.py  test_rest_api.py
tests/unit/: test_controllers.py  test_cyst_parser.py  test_rest_api.py  test_util.py
tests/unit_tests/: test_controllers.py
typings/docker/: client.pyi
typings/docker/api/: container.pyi  swarm.pyi
typings/docker/models/: containers.pyi  images.pyi  networks.pyi  nodes.pyi  resource.pyi  swarm.pyi  volumes.pyi
typings/docker/utils/: utils.pyi
(+62 files in other folders)
