[tool.poetry]
name = "docker-testbed"
version = "0.1.0"
description = ""
authors = ["Milan Bohacek <bohacek@ics.muni.cz>", "Jiri Raja <Raja@ics.muni.cz>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
docker = "^6.1.2"
netaddr = "^0.8.0"
randomname = "^0.2.1"
cyst-core = { path = "./cyst-core" }
black = {extras = ["d"], version = "^23.3.0"}
uvicorn = "^0.23.0"
asyncpg = "^0.28.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
sqlalchemy-utils = "^0.41.1"
pyyaml = "^6.0"
fastapi = {extras = ["all"], version = "^0.100.0"}
typer = {extras = ["all"], version = "^0.9.0"}
overrides = "^7.4.0"
asyncclick = "^8.1.3.4"
gitpython = "^3.1.36"
python-gitlab = "^3.15.0"
structlog = "^23.1.0"
giturlparse2 = "^1.0.0"
yamlize = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dr-emu = 'cli.main:app'
