[tool.poetry]
name = "dr-emu"
version = "0.1.0"
description = ""
authors = ["Milan Bohacek <bohacek@ics.muni.cz>", "Jiri Raja <Raja@ics.muni.cz>"]
readme = "README.md"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.1.2"
netaddr = "^0.9.0"
randomname = "^0.2.1"
cyst-core = { path = "./cyst-core" }
black = {extras = ["d"], version = "^23.3.0"}
uvicorn = "^0.23.0"
asyncpg = "^0.28.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
sqlalchemy-utils = "^0.41.1"
pyyaml = "^6.0"
fastapi = {extras = ["all"], version = "^0.104.0"}
typer = {extras = ["all"], version = "^0.9.0"}
overrides = "^7.4.0"
asyncclick = "^8.1.3.4"
gitpython = "^3.1.40"
python-gitlab = "^3.15.0"
structlog = "^23.1.0"
giturlparse2 = "^1.0.0"
yamlize = "^0.7.1"
giturlparse = "^0.12.0"
alembic = "^1.13.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dr-emu = 'cli.main:app'
