[tool.poetry]
name = "dr-emu"
version = "0.1.1"
description = ""
authors = ["Milan Bohacek <bohacek@ics.muni.cz>", "Jiri Raja <Raja@ics.muni.cz>"]
readme = "README.md"

[[tool.poetry.source]]
name = "dojo"
url = "https://gitlab.ics.muni.cz/api/v4/projects/6977/packages/pypi/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "cif"
url = "https://gitlab.ics.muni.cz/api/v4/projects/7197/packages/pypi/simple"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^7.1.0"
netaddr = "^0.9.0"
randomname = "^0.2.1"
cyst-core = { version = "*", source = "dojo" }
cif = { version = "*", source = "cif" }
black = {extras = ["d"], version = "^23.3.0"}
uvicorn = "^0.34.0"
asyncpg = "^0.28.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
sqlalchemy-utils = "^0.41.1"
pyyaml = "^6.0"
fastapi = {extras = ["all"], version = "^0.104.0"}
typer = {extras = ["all"], version = "^0.9.0"}
overrides = "^7.4.0"
structlog = "^25.1.0"
alembic = "^1.13"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
requests = "2.31.0"  # hotfix for docker api error
sqlmodel = "^0.0.22"
frozendict = "^2.4.6"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
aiosqlite = "^0.19.0"
pyright = "^1.1.0"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = true
reportImportCycles = true
reportMissingTypeStubs = true
venvPath = "./.venv/"
venv = "./"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "typings/",
    ".venv/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dr-emu = 'cli.main:app'

[tool.black]
line-length = 120
